package SpecialPowers;


public interface ISpecialPower {
    void aply();
}
